syntax = "proto2";

package exchange;

message Request {
	required Order ord = 1;
}

message Order {
	required string user = 1;
	required string company = 2;
	required int32 quantity = 3;
	required double unit_price = 4;
	required Type type = 5;

	enum Type {
		SELL = 1;
		BUY = 2;
	}
}

message Reply {
	optional Order order = 1;
	repeated TradeMsg trades = 2;
	optional ErrorMsg error_msg = 3;
}

message ErrorMsg {
	required string user = 1;
	optional string error = 2;
}

message TradeMsg {
	required string seller = 1;
	required string buyer = 2;
	required string company = 3;
	required int32 quantity = 4;
	required double unit_price = 5;
}
